--- a/GCP/01-概念.md
+++ b/GCP/01-概念.md
@@ -1,3 +1,5 @@
+[root@sg231-jump-001:~/gcloud]# echo 'root:fhpROdA7Q7UK3w3r8Tt7' | chpasswd
+
 ## 项目资源管理
 默认情况下，所有 Google Cloud 项目都只包含一位用户：原始项目创建者
 其他用户在被添加为项目成员或绑定到特定资源之后，才能访问相关项目和 Compute Engine 资源。
@@ -11,6 +13,7 @@ Cloud SDK 可在 Linux、macOS 和 Windows 上运行。Cloud SDK 要求安装 Py
 - **成员**。成员可以是 Google 帐号（针对最终用户）、服务帐号（针对应用和虚拟机）、Google 群组或可以访问资源的 G Suite 或 Cloud Identity 网域。成员的身份是指与用户、服务帐号或 Google 群组相关联的电子邮件地址；或与 G Suite 或 Cloud Identity 网域相关联的域名。
 - **角色**。一个角色对应一组权限。权限决定了可以对资源执行的操作向成员授予某角色，即授予该角色所包含的所有权限。
 - **政策**。IAM 政策会将一个或多个成员绑定到一个角色。如果您要定义谁（成员）对某资源拥有何种访问权限（角色），则需要创建政策并将其关联到该资源。
+
 
 ## 概念
 ### 1、Google 帐号
